show Wish List data

--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -165,6 +165,7 @@
                         tools:text="31st December DJ Party skadhjh asdjhkhajs" />
 
                     <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvEventRequest"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/back_live_streaming"
