--- a/app/src/main/res/layout/item_incoming_request.xml
+++ b/app/src/main/res/layout/item_incoming_request.xml
@@ -12,9 +12,10 @@
         android:background="@color/colorBackHome">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgRequestUserImage"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:src="@drawable/dummy"
+            android:src="@drawable/place_holder"
             />
 
         <LinearLayout
@@ -25,17 +26,19 @@
             android:paddingHorizontal="@dimen/_10sdp">
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvRequestUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="User Name"
+                tools:text="User Name"
                 app:fontFamily="@font/poppins_medium"
                 android:includeFontPadding="false"
                 android:textSize="@dimen/_14ssp"
                 android:textColor="@color/white" />
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvRequestEventName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Description"
+                tools:text="Description"
                 app:fontFamily="@font/poppins_medium"
                 android:includeFontPadding="false"
                 android:textSize="@dimen/_8ssp"
