--- a/app/src/main/res/layout/item_user_following.xml
+++ b/app/src/main/res/layout/item_user_following.xml
@@ -13,9 +13,10 @@
         android:background="@color/colorBackHome">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgUserProfile"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:src="@drawable/dummy"
+            android:src="@drawable/place_holder"
             />
 
         <LinearLayout
@@ -26,6 +27,7 @@
             android:paddingHorizontal="@dimen/_10sdp">
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="User Name"
@@ -34,17 +36,19 @@
                 android:textSize="@dimen/_14ssp"
                 android:textColor="@color/white" />
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvUserdata"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Description"
+                tools:text="Description"
                 app:fontFamily="@font/poppins_medium"
                 android:includeFontPadding="false"
                 android:textSize="@dimen/_8ssp"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:visibility="gone"/>
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvViewSentRequest"
+            android:id="@+id/tvFollow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:ignore="RtlCompat"
