--- a/app/src/main/res/layout/activity_manager_edit_event.xml
+++ b/app/src/main/res/layout/activity_manager_edit_event.xml
@@ -52,7 +52,7 @@
                         android:id="@+id/imgBack"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/_12sdp"
+                        android:padding="@dimen/_12sdp"
                         android:src="@drawable/back_arrow"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
