--- a/app/src/main/res/layout/activity_user_following.xml
+++ b/app/src/main/res/layout/activity_user_following.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_margin="@dimen/_12sdp"
+                android:padding="@dimen/_12sdp"
                 android:src="@drawable/back_arrow"
                 tools:ignore="RtlCompat" />
         </RelativeLayout>
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/_12sdp"
             android:includeFontPadding="false"
-            android:text="600 Following"
+            android:text="0 Following"
             android:textColor="@color/white"
             android:textSize="@dimen/_12ssp"
             app:fontFamily="@font/poppins_light"
