--- a/app/src/main/res/layout/fragment_manager_account.xml
+++ b/app/src/main/res/layout/fragment_manager_account.xml
@@ -74,7 +74,7 @@
                             android:id="@+id/tvAccountProfileName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="User Name"
+                            tools:text="User Name"
                             android:textColor="@color/white"
                             app:fontFamily="@font/poppins_bold"
                             android:includeFontPadding="false"
