--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,18 @@
                             android:textColor="@color/white"
                             android:textSize="17sp" />
 
+                        <RadioButton
+                            android:id="@+id/radioButton3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:buttonTint="@color/white"
+                            android:checked="false"
+                            android:fontFamily="@font/poppins_medium"
+                            android:text="@string/dj"
+                            android:textColor="@color/white"
+                            android:textSize="17sp" />
+
                     </RadioGroup>
 
                 </LinearLayout>
